--- a/autoenc/vqflow-f32.yaml
+++ b/autoenc/vqflow-f32.yaml
@@ -39,13 +39,13 @@ data:
     train:
       target: ldm.data.bvi_vimeo.Vimeo90k_triplet
       params:
-        db_dir: .../data/vimeo_triplet ## path to vimeo_triplet
+        db_dir: ...../data/vimeo_triplet ## path to vimeo_triplet
         crop_sz: [256,256]
         iter: True
     validation:
       target: ldm.data.bvi_vimeo.Vimeo90k_triplet
       params:
-        db_dir: ../data/vimeo_triplet ## path to vimeo_triplet
+        db_dir: ..../data/vimeo_triplet ## path to vimeo_triplet
         train: False
         crop_sz: [256,256]
         augment_s: False
